fix: horizontal and vertical scrolling issues for when there was no overflow.

--- a/frontend/src/website-frontend/src/components/navbar/navbar.css
+++ b/frontend/src/website-frontend/src/components/navbar/navbar.css
@@ -2,8 +2,9 @@
     display: flex;
     flex-direction: column;
     width: 250px;
-    height: auto; /* when rendering lists make the navbar longer.*/
-    min-height: 100vh; /* we want the navbar to extend the whole page.*/
+    /* height: 100%; */
+    height: auto; 
+    /* min-height: 100vh; we want the navbar to extend the whole page. */
     background-color: #2c3e50;
     color: white;
     padding: 20px 0;
@@ -58,6 +59,12 @@
 .mobile-only
 {
     display: none;
+}
+
+.socials
+{
+    margin: 0 auto;
+    /* margin-top: auto; */
 }
 
 
