--- a/frontend/src/website-frontend/src/index.css
+++ b/frontend/src/website-frontend/src/index.css
@@ -11,6 +11,7 @@
   text-rendering: optimizeLegibility;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  min-height: 100vh;
 }
 
 a {
@@ -25,17 +26,12 @@ a:hover {
 body {
   margin: 0;
   padding: 0;
-  /* display: flex; */
-  place-items: center;
-  min-width: 320px;
-  min-height: 100vh;
 }
 
 .app-layout {
     display: grid;
     grid-template-columns: 250px 1fr; /* navbar and then the remaining space */
     min-height: 100vh;
-    width: 100%;
 }
 
 h1 {
