--- a/frontend/src/website-frontend/src/pages/PreviewNotes.css
+++ b/frontend/src/website-frontend/src/pages/PreviewNotes.css
@@ -11,7 +11,7 @@ li {
 }
 
 .main-content {
-    width: 100vw - 250px;
+    /* width: calc(100vw - 264px);  */
     display: flex;
     flex-direction: column;
 }
